2/2 공부 Do it! 15일차 제이쿼리 이벤트 끝

--- a/html/007/test/event_last_test.html
+++ b/html/007/test/event_last_test.html
@@ -7,7 +7,7 @@
 	body{font: 14px Malgun Gothic, "맑은고딕",sans-serif;}
 	.zoomBtnZone{font-size: 14px;}
 </style>
-<script src="js/jquery.js"></script>
+<script src="../../../js/jquery.js"></script>
 <script>
 $(function(){
 	var baseFontSize = 14;
